<resources>
    <string name="app_name">CAT Wallet</string>
    <string name="title_send">Send</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_browser">Browser</string>
    <string name="title_request">My Address</string>
    <string name="title_import">Import Wallet</string>
    <string name="title_create">Create</string>
    <string name="title_account">Wallets</string>
    <string name="title_link_account">Account</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_create_account">New Wallet</string>
    <string name="prompt_to">To</string>
    <string name="action_send">Send</string>
    <string name="title_activity_account_list">AccountListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_select_account">Wallets</string>
    <string name="title_account_list">Wallets</string>
    <string name="title_account_detail">Wallet Detail</string>
    <string name="account_delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="confirm_delete_account">Make sure that you have a backup of this wallet.</string>
    <string name="title_activity_import_account">ImportAccountActivity</string>
    <string name="action_import">Import</string>
    <string name="title_activity_export_account">ExportAccountActivity</string>
    <string name="action_export">Backup private key</string>
    <string name="message_save_this">Keep this someplace safe</string>
    <string name="copy">Copy to clipboard</string>
    <string name="close">Close</string>
    <string name="keystore_keyword">KEYSTORE</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="menu_refresh">Refresh</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="pending">Pending</string>
    <string name="title_activity_settings">Settings</string>
    <string name="network_label">Network</string>
    <string name="currency_label">Currency</string>
    <string name="app_intro">Intro</string>
    <string name="title_trust">Trust</string>
    <string name="low_storage_error">low storage error</string>
    <string name="no_camera_permission">camera permission not given</string>
    <string name="ok">Ok</string>
    <string name="no_barcode_captured">no barcode captured</string>
    <string name="scan_barcode_button">Scan</string>
    <string name="barcode_error_format">Invalid barcode format: %s</string>
    <string name="action_request">My Address</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_delete_account">Are you sure you want to delete wallet?</string>
    <string name="no_transactions">No Transactions.\nSwipe down to refresh.</string>
    <string name="twitter">Twitter</string>
    <string name="telegram">Telegram Group</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_community">Community</string>
    <string name="title_opensource">Open source development</string>
    <string name="title_source_code">Source code</string>
    <string name="title_report_bug">Report a bug</string>
    <string name="title_rate">Rate us on Play Store</string>
    <string name="title_support">Support</string>
    <string name="title_share">Share With Friends</string>
    <string name="title_donate">Donate</string>
    <string name="account_already_imported">Wallet with this address already exists</string>
    <string name="message_delete_account">Permanently deleting wallet. Make sure that it has been exported and stored elsewhere.</string>
    <string name="error_import">Error importing keystore</string>
    <string name="message_this_is_your_address">My public Ethereum wallet address</string>
    <string name="min_pwd_length">Password must be at least %d chars long</string>
    <string name="backup_warning_text">
        Since only you control your money, you\'ll need to save your backup keystore in case this app is deleted. \n\n
        Your wallet is never saved to cloud storage or standard device backups.
    </string>
    <string name="share_message">
        Here is the app I use to store my ETH and ERC20 tokens. https://catwallet.com
    </string>
    <string name="message_no_backup">No backup, no Ethereum.</string>
    <string name="error_deleting_account">Error deleting wallet</string>
    <string name="error_deleting_account_with_details">Error deleting wallet %s</string>
    <string name="error_passwords_must_match">Passwords must match.</string>
    <string name="label_confirm_new_password">Confirm new password</string>
    <string name="label_new_password">New password</string>
    <string name="activity_title_backup">Backup: %s…</string>
    <string name="action_backup">Backup</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_terms">Terms and Conditions</string>
    <string name="title_version">Version</string>
    <string name="title_activity_token_list">Tokens</string>
    <string name="title_tokens">My Tokens</string>
    <string name="prompt_private_key">Private key</string>
    <string name="error_import_private_key">Error importing private key</string>
    <string name="message_importing_private_key">Importing private key. One moment.</string>
    <string name="lock_title">Lock screen</string>
    <string name="lock_body">Secure lock screen hasn\'t set up. It is not safe.</string>
    <string name="lock_settings">Lock settings</string>
    <string name="lock_exit">Exit</string>
    <string name="unlock_screen_title_android">Unlock screen</string>
    <string name="unlock_screen_prompt_android">Please unlock your Android device to continue.</string>
    <string name="sending_progress">Sending...</string>
    <string name="backup_new_password_text">Think of a password that will be installed on the backup. The password will be available for this wallet.</string>
    <string name="do_manage_make_backup">Did you manage to make a backup?</string>
    <string name="yes_continue">Yes, continue</string>
    <string name="no_repeat">No, repeat</string>
    <string name="unable_unblock_device">Unable to unlock the device.</string>
    <string name="skip">Skip</string>
    <string name="root_title">DEVICE SECURITY COMPROMISED</string>
    <string name="root_body">Any \'rooted\' app can access Cat Wallet\'s keychain data and steal your wallet! Wipe this wallet immediately and restore on a secure device.</string>
    <string name="gas_fee_title">Gas Fee (Gwei)</string>
    <string name="transfer">Transfer %s</string>
    <string name="action_buy">Buy</string>
    <string name="title_deposit">How would you like to buy?</string>
    <string name="empty" />
    <string name="try_again">Try again</string>
    <string name="already_have_account">Already have a wallet?</string>
    <string name="title_add_account">Add wallet</string>
    <string name="action_create_new_account">Create new wallet</string>
    <string name="unknown_error">An error has occurred.</string>
    <string name="action_backup_wallet">Backup Wallet</string>
    <string name="action_backup_later">Do it later</string>
    <string name="set_account_default">Do want to make a new wallet the main one?</string>
    <string name="no_tokens">No tokens found.</string>
    <string name="title_email">Email us</string>
    <string name="send_reminder">Transfer Funds Cost = Gas * Gas Price + Transfer Value</string>
    <string name="send_confirmation">You are going to send to</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_my_address">My Address</string>
    <string name="title_my_tokens">My Tokens</string>
    <string name="title_edit_tokens">Tokens</string>
    <string name="title_activity_send">Send</string>
    <string name="title_activity_confirmation">Confirm</string>
    <string name="title_transaction_details">Transaction Details</string>
    <string name="title_add_token">Add Custom Token</string>
    <string name="suggestion_field_required">* Field required</string>
    <string name="suggestion_import_keystore">Importing wallet as easy as creating</string>
    <string name="suggestion_private_key">Private key has to be 64 characters long</string>
    <string name="suggestion_empty_password_available">The password can be left blank.</string>
    <string name="suggestion_this_is_your_address">My %s wallet address</string>
    <string name="hint_private_key_field">Private key *</string>
    <string name="hint_keystore">Keystore *</string>
    <string name="tab_keystore">Keystore</string>
    <string name="tab_private_key">Private key</string>
    <string name="title_dialog_error">Error</string>
    <string name="title_dialog_handling">Handling…</string>
    <string name="title_dialog_watch_out">Watch out!</string>
    <string name="title_dialog_add_account">Add wallet</string>
    <string name="title_dialog_deposit">How would you like to buy?</string>
    <string name="dialog_message">Enter the password to encrypt your wallet</string>
    <string name="dialog_message_unrecoverable_message">If this device is replaced or this app is deleted, neither you nor Cat Wallet can recover your funds without a backup.</string>
    <string name="toast_message_wallet_imported">The wallet was imported</string>
    <string name="toast_message_wallet_exported">A backup was created</string>
    <string name="toast_qr_code_no_address">QR code doesn\'t contain valid address</string>
    <string name="link_phone_success">Link Phone Success</string>
    <string name="link_email_success">Link Email Success</string>
    <string name="link_success">Link Success</string>
    <string name="intro_title_first_page"><![CDATA[Private & Secure]]></string>
    <string name="intro_title_second_page">Fully Transparent</string>
    <string name="intro_title_third_page">Ultra reliable</string>
    <string name="intro_message_first_page">Private keys never leave your device.</string>
    <string name="intro_message_second_page">Code is open sourced (GPL-3.0 license) and fully audited.</string>
    <string name="intro_message_third_page">The fastest Ethereum wallet experience on mobile.</string>
    <string name="navigation_settings">Settings</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="label_gas_limit">Gas Limit</string>
    <string name="label_gas_price">Gas Price</string>
    <string name="label_network_fee">Network Fee</string>
    <string name="button_ok">OK</string>
    <string name="hint_recipient_address">Recipient address(ETH address/Email/Phone)</string>
    <string name="hint_amount">ETH Amount</string>
    <string name="hint_currency_amount">USD Amount</string>
    <string name="hint_contract_address">Contract address</string>
    <string name="hint_contract_symbol">Symbol</string>
    <string name="hint_contract_decimals">Decimals</string>
    <string name="subtitle_from">From</string>
    <string name="subtitle_to">To</string>
    <string name="action_wallets">Wallets</string>
    <string name="scan_qr">Get address from QR Code</string>
    <string name="facebook">Facebook</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Activation Code</string>
    <string name="action_link">Link</string>
    <string name="action_link_short">Link</string>
    <string name="title_mobile_account">Link Mobile Phone</string>
    <string name="title_email_account">Link Email</string>
    <string name="send_activation_code">Send Code</string>
    <string name="app_language">Language</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_contact">Add Contact</string>
</resources>