<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <Preference
            android:key="pref_wallet"
            android:icon="@mipmap/settings_backup"
            android:title="@string/action_wallets"
            />

        <ListPreference
            android:key="pref_rpcServer"
            android:title="@string/network_label"
            android:icon="@mipmap/settings_server"
            android:dialogTitle="@string/network_label" />

        <ListPreference
            android:key="pref_currency"
            android:title="@string/currency_label"
            android:icon="@mipmap/settings_currency"
            android:dialogTitle="@string/currency_label" />

        <ListPreference
            android:key="pref_language"
            android:title="@string/app_language"
            android:icon="@mipmap/setting_language"
            android:dialogTitle="@string/app_language" />

    <PreferenceCategory
        android:title="@string/title_link_account"
        android:key="pref_account" >

        <Preference
            android:key="pref_mobile_account"
            android:title="@string/title_mobile_account"

            android:icon="@mipmap/setting_link_phone">

        </Preference>

        <Preference
            android:key="pref_email_account"
            android:title="@string/title_email_account"
            android:icon="@mipmap/setting_link_email">
        </Preference>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/title_opensource"
        android:key="pref_opensource_links" >

        <Preference
            android:title="@string/title_source_code"
            android:icon="@mipmap/settings_open_source">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/CatWallet/trust-wallet-android" />
        </Preference>

        <Preference android:title="@string/title_report_bug"
            android:icon="@mipmap/settings_bug">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/CatWallet/trust-wallet-android/issues/new" />
        </Preference>

    </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/title_community"
            android:key="pref_community_links" >

            <Preference
                android:key="pref_twitter"
                android:title="@string/twitter"
                android:icon="@mipmap/settings_twitter">

            </Preference>

            <Preference
                android:key="pref_telegram"
                android:title="@string/telegram"
                android:icon="@mipmap/settings_telegram">
            </Preference>

            <Preference
                android:key="pref_facebook"
                android:title="@string/facebook"
                android:icon="@drawable/ic_facebook">

            </Preference>
        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/title_support"
            android:key="pref_support"
            >

            <Preference
                android:key="pref_share"
                android:icon="@mipmap/settings_share"
                android:title="@string/title_share" />

            <Preference
                android:key="pref_rate"
                android:icon="@mipmap/settings_rating"
                android:title="@string/title_rate" />

            <Preference
                android:key="pref_email"
                android:icon="@mipmap/settings_email"
                android:title="@string/title_email" />

            <Preference
                android:title="@string/title_privacy_policy"
                android:icon="@mipmap/settings_privacy_policy">
                <intent android:action="android.intent.action.VIEW"
                    android:data="https://support.catwallet.com/portal/kb/articles/privacy-policy" />
            </Preference>

            <Preference
                android:title="@string/title_terms"
                android:icon="@mipmap/settings_terms">
                <intent android:action="android.intent.action.VIEW"
                    android:data="https://support.catwallet.com/portal/kb/articles/terms-of-use" />
            </Preference>

            <Preference
                android:title="@string/title_version"
                android:key="pref_version"
                android:iconSpaceReserved="true">
            </Preference>

        </PreferenceCategory>

</PreferenceScreen>
