<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/layout_app_bar_send" />
    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_marginTop="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:id="@+id/send_to_address_layout"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/to_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/send_to_address"
                    android:hint="@string/hint_recipient_address"
                    android:imeActionLabel="@string/prompt_to"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingRight="@dimen/half_large_padding"
                    android:paddingEnd="@dimen/half_large_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/paste_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/scan_barcode_button"
                android:layout_alignTop="@+id/to_input_layout"
                android:layout_centerVertical="true"
                android:layout_marginEnd="49dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="pasteFromClipboard"
                android:text="Paste"
                android:textColor="@android:color/holo_blue_dark" />
            <ImageButton
                android:id="@+id/scan_barcode_button"
                android:src="@mipmap/qr_code_icon"
                android:contentDescription="@string/scan_qr"
                android:background="?android:selectableItemBackground"
                android:padding="@dimen/big_padding"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/send_amout_layout"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/amount_input_layout"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/send_amount"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:hint="@string/hint_amount"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="numberDecimal"
                    android:maxLength="15"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/max_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_alignTop="@+id/amount_input_layout"
                android:background="?attr/selectableItemBackground"
                android:onClick="setToMaxTransferAmount"
                android:text="Max"
                android:textColor="@android:color/holo_blue_dark" />
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/send_USD_amout_layout"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/currency_amount_input_layout"
                android:layout_marginTop="@dimen/big_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/send_amount_currency"
                    android:hint="@string/hint_currency_amount"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="15"
                    />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/clear_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_alignTop="@+id/currency_amount_input_layout"
                android:background="?attr/selectableItemBackground"
                android:onClick="clearAmount"
                android:text="Clear"
                android:textColor="@android:color/holo_blue_dark" />
        </RelativeLayout>
        <TextView
            android:id="@+id/reminderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:alpha="0.7"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/send_reminder"
            android:textStyle="italic" />
    </LinearLayout>




</FrameLayout>
